--- a/src/main/webapp/viewsJsf/themes.xhtml
+++ b/src/main/webapp/viewsJsf/themes.xhtml
@@ -4,7 +4,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
-	
+
 <h:head>
 	<title>Ver Temas</title>
 </h:head>
@@ -15,13 +15,20 @@
 			<tr>
 				<td>#{t.name}</td>
 				<td>#{t.question}</td>
+				<td>
+					<h:form>
+						<h:commandButton value="Eliminar Tema" action="#{themes.deleteTheme}">
+							<f:param name="themeId" value="#{t.id}" />
+						</h:commandButton>
+					</h:form>
+				</td>
 			</tr>
 		</ui:repeat>
 	</table>
 	<p>
-	<h:form>
-		<h:button value="Añadir Tema" outcome="addTheme" />
-	</h:form>
+		<h:form>
+			<h:button value="Añadir Tema" outcome="addTheme" />
+		</h:form>
 	</p>
 	<h:link value="Volver a home" outcome="home" />
 </h:body>
