UPDATE delete theme parts to remove traces

--- a/src/main/webapp/viewsJsf/deleteTheme.xhtml
+++ b/src/main/webapp/viewsJsf/deleteTheme.xhtml
@@ -12,7 +12,7 @@
 	<h3>Vista de Eliminar Tema</h3>
 	<h:form id="deleteTheme">
 		<p>
-			Se dispone a borrar el tema #{deleteTheme.theme.name} #{deleteTheme.id}
+			Se dispone a borrar el tema #{deleteTheme.theme.name}
 		</p>
 		<p>
 			Autorización: <h:inputText id="auth" value="#{deleteTheme.auth}"/>
